[project]
name = "til"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "mcp>=1.6.0",
    "openai>=1.70.0",
    "pydantic>=2.11.2",
    "pydantic-ai[cli]>=0.0.52",
    "python-dotenv>=1.1.0",
]
# ... (keep your existing [project] section above) ...

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "F401",  # imported but unused
    "T201",  # `print` found
    "INP001", # implicit namespace package (Ruff's code
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
